[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/UserInterface/ChangeSceneButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UserInterface/CustomizePlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UserInterface/PauseOverlay.gd" type="Script" id=4]
[ext_resource path="res://assets/ui/flat_pixel_theme.tres" type="Theme" id=5]
[ext_resource path="res://src/UserInterface/ButtonWithSound.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/UserInterface/SoundControl.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/UserInterface/HowToPlay.tscn" type="PackedScene" id=8]

[node name="PauseOverlay" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
color = Color( 0.741176, 0.576471, 0.905882, 0.180392 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -52.0
margin_right = 75.0
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 150.0
margin_bottom = 104.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" parent="MarginContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_right = 150.0
margin_bottom = 19.0
text = "Resume (Esc)"

[node name="RestartButton" parent="MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 23.0
margin_right = 150.0
margin_bottom = 42.0
next_scene = ExtResource( 3 )

[node name="SoundControlButton" parent="MarginContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 46.0
margin_right = 150.0
margin_bottom = 65.0
text = "Sound Control"

[node name="HowToPlayButton" parent="MarginContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 69.0
margin_right = 150.0
margin_bottom = 88.0
text = "How to play"

[node name="SoundControl" parent="." instance=ExtResource( 7 )]
visible = false

[node name="HowToPlay" parent="." instance=ExtResource( 8 )]
visible = false

[connection signal="button_up" from="MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_Resume_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/RestartButton" to="." method="_on_ChangeSceneButton_button_up"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SoundControlButton" to="." method="_on_SoundControlButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HowToPlayButton" to="." method="_on_HowToPlayButton_pressed"]
